Docker example uses Java 24