@@ -48,6 +48,10 @@ fi
 standardJavaOptions=()
 standardJavaOptions+=("-Dfile.encoding=UTF-8")
 standardJavaOptions+=("-XX:MaxJavaStackTraceDepth=999999")  # To analyze StackOverflowError
+if [[ "$JAVA_VERSION" =~ ([0-9]+).* && ${BASH_REMATCH[1]} -ge 24 ]]; then
+  standardJavaOptions+=("-XX:+UnlockExperimentalVMOptions" "-XX:+UseCompactObjectHeaders")
+fi
+
 
 timestamp() {
   local t
